[package]
name = "pomo-break"
version = "0.1.0"
authors = ["Philipp Hansch <dev@phansch.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/hecrj/iced.git", features = ["async-std"] }
